--- a/css/Assign3.css
+++ b/css/Assign3.css
@@ -5,19 +5,22 @@ body{
   font-size: 16px;
 }
 #header-nav{
-/*   position: relative; */
+  position: relative;
   background-color: #ffce00;
   border-radius: 0;
   border: 0;
   color: #61122f;
 }
+.navbar-brand{
+  position: absolute;
+}
 #content{
   background-color: Tomato;
 }
-/* #content div{
-  margin-left: -20px;
-  margin-right: -20px;
-} */
+#content div{
+  margin-left: 20px;
+  margin-right: 20px;
+} 
 div #heading {
   text-align: center;
   font-size: 30px;
